--- a/styles/style.css
+++ b/styles/style.css
@@ -9,16 +9,20 @@ h2, h3, h4{
     font-size: 8rem;
 }
 .texto-custom{
+    text-align: center;
     color: red;
     background-color: blanchedalmond;
     font-style: italic;
 }
 .texto-custom-dos{
+    text-align: right;
     color: green;
     background-color: azure;
+    font-style: oblique;
 }
 .espacio-abajo-custom{
-    margin-bottom: 50px;
+    margin:50px 30px;
+    padding: 0 0 20px 2rem;
 }
 
 #identificador-parrafo{
