--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ h2, h3, h4{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 30px;
     font-size: 8rem;
+    border: 2px solid black;
 }
 .texto-custom{
     text-align: center;
@@ -33,4 +34,9 @@ h2, h3, h4{
 }
 ul .list-item{
     border: 2px solid black
+}
+.caja-ejemplo{
+    width: 400px;
+    border: 3px solid orange;
+    background-color: olivedrab;
 }
