creacion de las bases de cajitas, sin usar todavia el html de cajitas, o sea, todavia no me lleva a nada

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,3 +40,16 @@ ul .list-item{
     border: 3px solid orange;
     background-color: olivedrab;
 }
+.navegador{
+    padding: 20px;
+    background-color: deeppink;
+}
+.nav-item{
+    display: inline-block;
+    list-style: none;
+    margin-right: 20px;
+}
+.nav-item a{
+    text-decoration: none;
+    color: darkslateblue;
+}
