--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+* {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 h1{
     font-size: 100px;
     padding: 50px;
