--- a/styles/cajitas.css
+++ b/styles/cajitas.css
@@ -3,18 +3,49 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(203, 60, 60);
+}
 .cajitas-main{
     margin: 15px;
-    background-color: rgb(225, 50, 50);
 }
 .cajita{
     display: inline-block;
+    position: relative;
     width: 250px;
-    height: 300px;
+    height: 350px;
     margin-right: 10px;
     background-color: goldenrod;
     border-radius: 10px;
     text-align: center;
-    padding-top: 30px;
-    
+    padding: 30px 10px 10px 10px;
+
+}
+.cajitas-titulo{
+margin-bottom: 50px;
+}
+.boton-custom{
+    margin-top: 20px;
+    width: 140px;
+    height: 40px;
+    border-radius: 10px;
+    color: cadetblue;
+    border: 0;
+}
+.colormorado{
+background-color: purple;
+}
+.colorazul{
+    background-color: rgb(53, 53, 120);
+}
+.colorverde{
+    background-color: rgb(45, 134, 45);
+}
+.circulo{
+    top: -15%;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    background-color: black;
+    border-radius: 50%;
 }
