--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 h1{
     font-size: 100px;
     padding: 50px;
+    border:2px solid black;
 }
 h2, h3, h4{
     color: aqua;
@@ -26,6 +27,9 @@ h2, h3, h4{
     color: green;
     background-color: azure;
     font-style: oblique;
+}
+h1{
+    border-color: blueviolet;
 }
 .espacio-abajo-custom{
     margin:50px 30px;
