--- a/styles/style.css
+++ b/styles/style.css
@@ -16,12 +16,16 @@ h2, h3, h4{
     font-size: 8rem;
     border: 2px solid black;
 }
+.main-content h1.texto-custom{
+    color: darkkhaki;
+}
 .texto-custom{
     text-align: center;
     color: red;
     background-color: blanchedalmond;
     font-style: italic;
 }
+/*Un class es mas espeifica que un h1 por ejemplo, y eso hace que sea leido*/
 .texto-custom-dos{
     text-align: right;
     color: green;
