--- a/styles/tarjeta.css
+++ b/styles/tarjeta.css
@@ -1,20 +1,24 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 body{
     font-family: "Roboto", sans-serif;
 }
 #tarjetauno{
     background-color: #1e3932;
+    position: relative;
 
 }
 #tarjetauno .contenedorimagen{
     width: 50%;
-    display: inline-block;
-    vertical-align: middle;
-
 }
 #tarjetauno .contenedorimagen .imagenizq{
     max-width: 100%;
 }
 .contenedortexto{
+    position:absolute;
     color: white;
     text-align: center;
     width: 365px;
