--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -50,7 +50,13 @@ cambiar de color mi cosa*/
     align-items: center;
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 426px) {
+    .main-container{
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 769px) {
     .main-container{
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -74,3 +80,9 @@ cambiar de color mi cosa*/
         border: 1px solid black;
     }
 }
+
+/* media querie para laptop L
+@media screen and (1024) {
+    
+}
+*/
