--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@ mientras me desplazo y se va a quedar arriba*/
     background-color: deeppink;
     position: sticky;
     top: 0;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
 }
 .nav-item{
     display: inline-block;
