--- a/styles/starvucks.css
+++ b/styles/starvucks.css
@@ -213,3 +213,49 @@ body{
     display: inline-block;
     vertical-align: middle;
 }
+
+/* aquí va la imagen 5*/
+
+#tarjetacinco{
+    background-color: #d40434;
+}
+#tarjetacinco .contenedorimagene{
+    width: 50%;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#tarjetacinco .contenedorimagene .imagenizqe{
+    max-width: 100%;
+    height: auto;
+}
+.contenedortextoe{
+    color: white;
+    text-align: center;
+    width: 365px;
+    line-height: 2.5;
+    padding-left: 80px;
+}
+.contenedorinte{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#tarjetacinco .banner-button-red{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#conoce-mas .banner-button-red .banner-buttonn {
+    display: inline-block;
+    background: none;
+    border: 1px solid white;
+    border-radius: 50px;
+    padding: 7px 16px;
+    font-weight: 600;
+    line-height: 1;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    }
