--- a/styles/starvucks.css
+++ b/styles/starvucks.css
@@ -52,6 +52,7 @@ body {
     width: 100%;
     z-index: 999;
     bottom: 0px;
+    box-shadow: 0px -3px 5px 0px rgba(0, 0, 0, 0.1);
 }
 .classstylecookie .cookie-banner {
     flex: 1 0 300px;
@@ -560,4 +561,5 @@ body {
     font-size: .875rem;
     font-weight: 300;
     text-align: center;
+    padding-bottom: 120px;
 }
